--- a/Blog.html
+++ b/Blog.html
@@ -223,7 +223,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <a href="Blogfiches/comment-nettoyer-et-entretenir-votre-vitres.html">
-                                    <img src="imagesBlog/1.webp" width="auto" height="auto" alt="Comment nettoyer et entretenir votre vitres">
+                                    <img  src="imagesBlog/1.webp" width="auto" height="auto" alt="Comment nettoyer et entretenir votre vitres">
                                 </a>
                             </div>
                         </div>
@@ -249,7 +249,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <a href="Blogfiches/comment-bien-nettoyer-votre-restaurant.html">
-                                    <img src="imagesBlog/2.webp" width="auto" height="auto" alt="Comment bien nettoyer votre restaurant ?">
+                                    <img class="blogimg" src="imagesBlog/2.webp" width="auto" height="auto" alt="Comment bien nettoyer votre restaurant ?">
                                 </a>
                             </div>
                         </div>
@@ -275,7 +275,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <a href="Blogfiches/conseil-nettoyage-hotels.html">
-                                    <img src="imagesBlog/3.webp">
+                                    <img class="blogimg" src="imagesBlog/3.webp">
                                 </a>
                             </div>
                         </div>
@@ -298,7 +298,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <a href="Blogfiches/conseil-nettoyage-villas.html">
-                                    <img src="imagesBlog/4.webp" width="auto" height="auto" alt="Conseils de nettoyage villas">
+                                    <img class="blogimg" src="imagesBlog/4.webp" width="auto" height="auto" alt="Conseils de nettoyage villas">
                                 </a>
                             </div>
                         </div>
@@ -326,7 +326,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <a href="Blogfiches/conseils-nettoyage-appartement.html">
-                                    <img src="imagesBlog/5.webp">
+                                    <img class="blogimg" src="imagesBlog/5.webp">
                                 </a>
                             </div>
                         </div>
@@ -352,7 +352,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <a href="Blogfiches/specialistes-nettoyage-industriel.html">
-                                    <img src="imagesBlog/6.webp">
+                                    <img class="blogimg" src="imagesBlog/6.webp">
                                 </a>
                             </div>
                         </div>
@@ -375,7 +375,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <a href="Blogfiches/decontamination-covid-19-et-autres-risques.html">
-                                    <img src="imagesBlog/7.webp">
+                                    <img class="blogimg" src="imagesBlog/7.webp">
                                 </a>
                             </div>
                         </div>
@@ -401,7 +401,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <a href="Blogfiches/vos-vitres-vous-remercieront-pour-cette-proprete-eclatante.html">
-                                    <img src="imagesBlog/8.webp">
+                                    <img class="blogimg" src="imagesBlog/8.webp">
                                 </a>
                             </div>
                         </div>
@@ -428,7 +428,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <a href="Blogfiches/nettoyage-bacs-et-cuves.html" alt="Société de Nettoyage Casablanca">
-                                    <img src="imagesBlog/9.webp" width="auto" height="auto">
+                                    <img class="blogimg" src="imagesBlog/9.webp" width="auto" height="auto">
                                 </a>
                             </div>
                         </div>
@@ -452,7 +452,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <a href="Blogfiches/agent-entretien-et-conditions-metier.html">
-                                    <img src="imagesBlog/10.webp" width="auto" height="auto" alt="Agent d&#39;entretien et les conditions métiers">
+                                    <img class="blogimg" src="imagesBlog/10.webp" width="auto" height="auto" alt="Agent d&#39;entretien et les conditions métiers">
                                 </a>
                             </div>
                         </div>
@@ -479,7 +479,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <a href="Blogfiches/a-quoi-sert-une-monobrosse-et-comment-sen-servir.html">
-                                    <img src="imagesBlog/11.webp" width="auto" height="auto" alt="A quoi sert une monobrosse et comment s&#39;en servir ?">
+                                    <img class="blogimg" src="imagesBlog/11.webp" width="auto" height="auto" alt="A quoi sert une monobrosse et comment s&#39;en servir ?">
                                 </a>
                             </div>
                         </div>
@@ -504,7 +504,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <a href="Blogfiches/entretien-sols-souples.html">
-                                    <img src="imagesBlog/12.webp" width="auto" height="auto" alt="Fiche méthode : L&#39;entretien des sols souples">
+                                    <img class="blogimg" src="imagesBlog/12.webp" width="auto" height="auto" alt="Fiche méthode : L&#39;entretien des sols souples">
                                 </a>
                             </div>
                         </div>
@@ -528,7 +528,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <a href="Blogfiches/decapage-au-mouille.html">
-                                    <img src="imagesBlog/13.webp" width="auto" height="auto" alt="Fiche méthode : Le décapage au mouillé">
+                                    <img class="blogimg" src="imagesBlog/13.webp" width="auto" height="auto" alt="Fiche méthode : Le décapage au mouillé">
                                 </a>
                             </div>
                         </div>
@@ -552,7 +552,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <a href="Blogfiches/decapage-a-sec.html">
-                                    <img src="imagesBlog/14.webp" width="auto" height="auto" alt="Fiche méthode : Le décapage à sec">
+                                    <img class="blogimg" src="imagesBlog/14.webp" width="auto" height="auto" alt="Fiche méthode : Le décapage à sec">
                                 </a>
                             </div>
                         </div>
@@ -578,7 +578,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <a href="Blogfiches/spray-method.html">
-                                    <img src="imagesBlog/15.webp" width="auto" height="auto" alt="Fiche méthode : Le spray method">
+                                    <img class="blogimg" src="imagesBlog/15.webp" width="auto" height="auto" alt="Fiche méthode : Le spray method">
                                 </a>
                             </div>
                         </div>
