--- a/contact.html
+++ b/contact.html
@@ -322,7 +322,7 @@
 	   height: 40px; " id="pr">
 						   <option value="" disabled="" selected="" hidden="">Choisi le Sujet</option>
 												   <option value="Studio"> Studio </option>
-												   <option value="Studio"> Appartement </option>
+												   <option value="Appartement"> Appartement </option>
 												   <option value="Maison"> Maison </option>
 												   <option value="Villa"> Villa </option>
 												   <option value="Autre"> Autre </option>
