--- a/Blog.html
+++ b/Blog.html
@@ -223,7 +223,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <a href="Blogfiches/comment-nettoyer-et-entretenir-votre-vitres.html">
-                                    <img  src="imagesBlog/1.webp" width="auto" height="auto" alt="Comment nettoyer et entretenir votre vitres">
+                                    <img  class="blogimg" src="imagesBlog/1.webp" width="auto" height="auto" alt="Comment nettoyer et entretenir votre vitres">
                                 </a>
                             </div>
                         </div>
