--- a/Blog.html
+++ b/Blog.html
@@ -45,10 +45,12 @@
 	<!-- Responsive CSS -->
 	<link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="stylesheet" href="assets/css/blog.css">
+	<link rel="stylesheet" href="Notification/notification.css">
+	<link href='https://unpkg.com/css.gg@2.0.0/icons/css/close-o.css' rel='stylesheet'>
 </head>
 
 <body>
-    <div style="display:none;visibility:hidden">
+    					<div style="display:none;visibility:hidden">
         <h2>société de nettoyage à casablanca</h2>
         <h2>societe de nettoyage a casablanca</h2>
         <h2>societe de nettoyage casablanca</h2>
@@ -100,18 +102,18 @@
         <h2>Nettoyage à zenith</h2>
     </div>
 	<!-- Start Navbar Area -->
-	<div class="navbar-area">
-		<div class="procleaning-nav-top-bar d-none d-lg-block">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-10">
-						<div class="call-to-action">
+						<div class="navbar-area">
+							<div class="procleaning-nav-top-bar d-none d-lg-block">
+								<div class="container">
+									<div class="row">
+										<div class="col-sm-10">
+											<div class="call-to-action">
 							<p><i class="icofont-location-pin"></i> Société de Nettoyage Casablanca Maroc</p> 
-							<p><i class="icofont-envelope"></i> <a href="mailto:contact@cleantapmaroc.com">ara.nettoyage.maroc@gmail.com</a> </p>
-							<p><i class="icofont-ui-touch-phone"></i> <a href="tel:+212676258933">+212 666 282 962</a> </p>
+							<p><i class="icofont-envelope"></i> <a href="mailto:contact.ara.nettoyage@gmail.com">contact.ara.nettoyage@gmail.com</a> </p>
+							<p><i class="icofont-ui-touch-phone"></i> <a href="tel:+212666282962">+212 666 282 962</a> </p>
 						</div>
 					</div>
-					<div class="" style="margin: left 140px;">
+										<div class="" style="margin: left 140px;">
 						<ul class="top-social">
 							<li><a href="#"><i class="fab fa-facebook-f"></i></a> </li>
 							<li><a href="#"><i class="fab fa-twitter"></i></a> </li>
@@ -122,24 +124,24 @@
 				</div>
 			</div>
 		</div>
-		<div class="procleaning-responsive-nav procleaning-fixed-nav" style="width:80%;margin-left:70px">
-			<div class="container">
-				<div class="procleaning-responsive-menu">
-					<div class="logo">
+							<div class="procleaning-responsive-nav procleaning-fixed-nav" style="width:80%;margin-left:70px">
+								<div class="container">
+									<div class="procleaning-responsive-menu">
+										<div class="logo">
 						<a href="index.html"> <img src="images/logo-black.png" alt="logo" style="position:relative"> </a>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="procleaning-nav procleaning-fixed-nav" >
-			<div class="container" >
+							<div class="procleaning-nav procleaning-fixed-nav" >
+								<div class="container" >
 				<nav class="navbar navbar-expand-md navbar-light">
 					<a class="navbar-brand" href="index.html"> <img src="images/logo-black.png" alt="logo"> </a>
-					<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
+										<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 						<ul class="navbar-nav">
 							<li class="nav-item"> <a href="index.html" class="nav-link">Accueil</a>
 							</li>
-							<li class="nav-item"> A PROPOS <i class="fas fa-chevron-down"></i>
+							<li class="nav-item"> <a>A PROPOS <i class="fas fa-chevron-down"></i></a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"> <a href="nettoyage-Casablanca.html" class="nav-link">Nettoyage Casablanca</a> </li>
 									<li class="nav-item"> <a href="Nos-Valeurs-Et-Engagements.html" class="nav-link">Nos valeurs et engagements</a> </li>
@@ -161,7 +163,7 @@
 									<li class="nav-item"><a href="nettoyage-hotels-casablanca.html" class="nav-link">Nettoyage Hôtels</a></li>
 									<li class="nav-item"><a href="nettoyage-moquettes-casablanca.html" class="nav-link">Nettoyage moquettes</a></li>
 									<li class="nav-item"><a href="nettoyage-parquet-casablanca.html" class="nav-link">Nettoyage parquets</a></li>
-		<li class="nav-item"><a href="nettoyage-grand-nettoyage-casablanca.html" class="nav-link">Grand Nettoyage</a></li>						</ul>
+						<li class="nav-item"><a href="nettoyage-grand-nettoyage-casablanca.html" class="nav-link">Grand Nettoyage</a></li>						</ul>
 								<li class="nav-item"> <a href="services.html" class="nav-link">NOS ACTIVITES   <i class="fas fa-chevron-down"></i></a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a href="societe-nettoyage-Assainissement-casablanca.html" class="nav-link">Assainissement</a></li>
@@ -190,7 +192,7 @@
 							</li>
 						</ul>
 						
-						<div class="other-option"> <a class=" mary" href="demandez-devis.html">DEMANDEZ DEVIS</a> </div>
+											<div class="other-option"> <a class=" mary" href="demandez-devis.html">DEMANDEZ DEVIS</a> </div>
 					</div>
 				</nav>
 			</div>
