--- a/contact.html
+++ b/contact.html
@@ -530,7 +530,7 @@
 					
 					</div>
 
-					<div class="button-devis">
+					<div class="button-devis mb-3">
 					   <a class="btn-primary mt-3" style="" href="tel:+212666282962">
 						 
 						+212 666-282962</a>
