--- a/Blogfiches/a-quoi-sert-une-monobrosse-et-comment-sen-servir.html
+++ b/Blogfiches/a-quoi-sert-une-monobrosse-et-comment-sen-servir.html
@@ -21,9 +21,6 @@
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Vollkorn:wght@400;500;600;700;800;900&amp;display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700;900&amp;display=swap" rel="stylesheet">
-	<!-- Favicon -->
-	<link rel="icon" type="image/png" href="../assets/img/favicon.png">
-	<!-- Bootstrap Min CSS -->
 	<link rel="stylesheet" href="../assets/css/bootstrap.min.css">
 	<!-- Animate Min CSS -->
 	<link rel="stylesheet" href="../assets/css/animate.min.css">
@@ -45,6 +42,8 @@
 	<!-- Responsive CSS -->
 	<link rel="stylesheet" href="../assets/css/responsive.css">
     <link rel="stylesheet" href="../assets/css/blog.css">
+	<link rel="stylesheet" href="../Notification/notification.css">
+	<link href='https://unpkg.com/css.gg@2.0.0/icons/css/close-o.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -367,6 +366,19 @@
         
         </div>
     </div>
+	<div class="go-top">
+		<i class="fas fa-chevron-up"></i>
+		<i class="fas fa-chevron-up"></i>
+	</div>
+	<div class="row" id="contacts">
+		<div class="col-sm-12">
+<ul class="contact-list">
+<li><a href="mailto:contact.ara.nettoyage@gmail.com"><img src="../imagesBlog/courrier.webp" width="auto" height="auto" alt="Demander un devis de ARA NETTOYAGE"></a></li>
+<li><a class="text-dark" href="tel:+212666282962"><img src="../imagesBlog/phone-call.webp" width="auto" height="auto" alt="ARA NETTOYAGE TEL"></a></li>
+<li><a class="text-dark" href="https://wa.me/212666282962"><img src="../imagesBlog/whatsapp icone.png" width="auto" height="auto" alt="WhatsApp ARA NETTOYAGE"></a></li>
+</ul>
+</div>
+</div>
     <!-- Start Footer Section -->
 	<section class="footer-area">
 		<div class="container">
@@ -436,15 +448,7 @@
 	
 	<!-- End Footer Copyright Section -->
 	<!-- Start Go Top Section -->
-	<div class="go-top">
-		<i class="fas fa-chevron-up"></i>
-		<i class="fas fa-chevron-up"></i>
-	</div>
-	<ul class="contact-list">
-		<li><a href="mailto:contact.ara.nettoyage@gmail.com"><img src="../imagesBlog/courrier.webp" width="auto" height="auto" alt="Demander un devis de ARA NETTOYAGE"></a></li>
-		<li><a class="text-dark" href="tel:+212666282962"><img src="../imagesBlog/phone-call.webp" width="auto" height="auto" alt="ARA NETTOYAGE TEL"></a></li>
-		<li><a class="text-dark" href="https://wa.me/212666282962"><img src="../imagesBlog/whatsapp icone.png" width="auto" height="auto" alt="WhatsApp ARA NETTOYAGE"></a></li>
-	</ul>
+	
 	<!-- End Go Top Section -->
 	<!-- jQuery Min JS -->
 	<script src="../assets/js/jquery.min.js"></script>
