--- a/Blogfiches/comment-bien-nettoyer-votre-restaurant.html
+++ b/Blogfiches/comment-bien-nettoyer-votre-restaurant.html
@@ -454,11 +454,14 @@
 		<i class="fas fa-chevron-up"></i>
 		<i class="fas fa-chevron-up"></i>
 	</div>
-    <ul class="contact-list">
-        <li><a href="mailto:contact.ara.nettoyage@gmail.com"><img src="../imagesBlog/courrier.webp" width="auto" height="auto" alt="Demander un devis de ARA NETTOYAGE"></a></li>
-        <li><a class="text-dark" href="tel:+212666282962"><img src="../imagesBlog/phone-call.webp" width="auto" height="auto" alt="ARA NETTOYAGE TEL"></a></li>
-        <li><a class="text-dark" href="https://wa.me/212666282962"><img src="../imagesBlog/whatsapp icone.png" width="auto" height="auto" alt="WhatsApp ARA NETTOYAGE"></a></li>
-    </ul>
+   <div class="row" id="contacts">
+		<div class="col-sm-12">
+<ul class="contact-list">
+<li><a href="mailto:contact.ara.nettoyage@gmail.com"><img src="../imagesBlog/courrier.webp" width="auto" height="auto" alt="Demander un devis de ARA NETTOYAGE"></a></li>
+<li><a class="text-dark" href="tel:+212666282962"><img src="../imagesBlog/phone-call.webp" width="auto" height="auto" alt="ARA NETTOYAGE TEL"></a></li>
+<li><a class="text-dark" href="https://wa.me/212666282962"><img src="../imagesBlog/whatsapp icone.png" width="auto" height="auto" alt="WhatsApp ARA NETTOYAGE"></a></li>
+</ul>
+</div>
 	<!-- End Go Top Section -->
 	<!-- jQuery Min JS -->
 	<script src="../assets/js/jquery.min.js"></script>
